--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">  
+    <title>Color Picker Web</title>
     <script src="script.js" defer></script>
   </head>
   <body>
